2001-08-07  Darin Adler  <darin@bentspoon.com>

	* Makefile.am:
	* configure.in:
	No need to build intl directory given how we use gettext.

2001-08-07  Martin Baulig  <baulig@suse.de>

	* configure.in: Fix the PKG_CHECK_MODULES checks.
	You need to check for all dependencies for any given target in a
	single PKG_CHECK_MODULES command, otherwise you'll get duplicate
	-ldl etc. into your *.la files.

	* */Makefile.am: Use the correct _CFLAGS and _LIBS.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* configure.in: Use PKG_CHECK_MODULES instead of
	GNOME_PKGCONFIG_CHECK_MODULES.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-main.c: #include <libgnome/gnome-init.h>,
	not <libgnome/libgnome-init.h>.

	* samples/compound-doc/container/container.c: Ditto.

2001-08-05  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add changes.txt

2001-08-01  Darin Adler  <darin@bentspoon.com>

	* samples/bonoboui-hello/main.c:
	* tests/test-selector.c:
	Update <libgnome/libgnome.h> to <libgnome.h>.

2001-08-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-selector-widget.c: update for bonobo-activation.

2001-08-01  ERDI Gergo  <cactus@cactus.rulez.org>

	* changes.txt: Added note about new opt_ev's

	* bonobo/bonobo-control.h: Add opt_ev's around the place

	* bonobo/bonobo-control-frame.h: ditto

2001-08-01  Michael Meeks  <michael@ximian.com>

	* samples/controls/sample-control-container.c (main): upd.

2001-07-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added zh_TW.Big5 to ALL_LINGUAS.

2001-07-31  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c, 
	* tests/test-sensitivity.c, 
	* tests/test-moniker.c, 
	* tests/test-focus.c, 
	* tests/test-container.c, 
	* bonobo/bonobo-window.c, 
	* bonobo/bonobo-ui-main.c, 
	* bonobo/bonobo-ui-container.c, 
	* samples/controls/sample-control-factory.c, 
	* samples/controls/sample-control-container.c: remove 
	redundant liboaf.h includes.

2001-07-30  ERDI Gergo  <cactus@cactus.rulez.org>
