@@ -45,7 +45,7 @@ typedef struct {
 	void (* set_want_label) (BonoboUIToolbarButtonItem *toolbar_button_item);
 } BonoboUIToolbarButtonItemClass;
 
-GtkType    bonobo_ui_toolbar_button_item_get_type           (void);
+GtkType    bonobo_ui_toolbar_button_item_get_type           (void) G_GNUC_CONST;
 void       bonobo_ui_toolbar_button_item_construct          (BonoboUIToolbarButtonItem *item,
 							     GtkButton                 *button_widget,
 							     GdkPixbuf                 *icon,
