@@ -37,7 +37,7 @@ typedef struct {
 } BonoboWrapperClass;
 
 
-GtkType		 bonobo_wrapper_get_type		(void);
+GtkType		 bonobo_wrapper_get_type	(void) G_GNUC_CONST;
 GtkWidget	*bonobo_wrapper_new		(void);
 
 void		 bonobo_wrapper_set_covered	(BonoboWrapper *wrapper, gboolean covered);
