@@ -60,7 +60,7 @@ typedef struct {
 	void (*zoom_to_default)	(BonoboZoomable *zoomable);
 } BonoboZoomableClass;
 
-GType		 bonobo_zoomable_get_type (void);
+GType		 bonobo_zoomable_get_type                       (void) G_GNUC_CONST;
 Bonobo_Zoomable	 bonobo_zoomable_corba_object_create		(BonoboObject   *object);
 
 BonoboZoomable	*bonobo_zoomable_new				(void);
